Mon Sep 28 14:24:03 1998  Mark Mitchell  <mark@markmitchell.com>

	* tree.h (TYPE_BINFO): Document.

Mon Sep 28 12:55:49 1998   Stan Cox  <scox@cygnus.com>

	* i386-coff.h (dbxcoff.h): Added.

Mon Sep 28 12:51:00 1998  Catherine Moore  <clm@cygnus.com>

        * toplev.c:  fix bad patch around flag_data_sections.

Mon Sep 28 10:32:28 1998  Nick Clifton  <nickc@cygnus.com>

	* reload1.c (reload): Use reload_address_index_reg_class and 
 	reload_address_base_reg_class when setting
	caller_save_spill_class.  (Patch generated by Jim Wilson:
	wilson@cygnus.com).

Mon Sep 28 07:43:34 1998  Mark Mitchell  <mark@markmitchell.com>

	* c-common.c (c_get_alias_set): Tighten slightly for FUNCTION_TYPEs
	and ARRAY_TYPEs.  Tidy up.  Improve support for type-punning. 
	* expr.c (store_field): Add alias_set parameter.  Set the
	MEM_ALIAS_SET accordingly, if the target is a MEM.
	(expand_assignment): Use it.
	(store_constructor_field): Pass 0.
	(expand_expr): Likewise.

Mon Sep 28 07:54:03 1998  Catherine Moore  <clm@cygnus.com>
 
        * flags.h:  Add flag_data_sections.
        * toplev.c:  Add option -fdata-sections.  Add flag_data_sections.
        (compile_file):  Error if flag_data_sections not supported.
        * varasm.c (assemble_variable):  Handle flag_data_sections.
        * config/svr4.h:  Modify prefixes for UNIQUE_SECTION_NAME.
        * config/mips/elf.h:  Likewise.
        * config/mips/elf64.h:  Likewise.
        * invoke.texi:  Describe -fdata-sections.
 
Mon Sep 28 04:15:44 1998  Craig Burley  <burley@melange.gnu.org>

	* invoke.texi (-ffloat-store): Clarify that this option
	does not affect intermediate results -- only variables.

Mon Sep 28 04:11:35 1998  Jeffrey A Law  (law@cygnus.com)

	* cpp.texi: Update for Fortran usage from Craig.

Fri Sep 25 22:09:47 1998  David Edelsohn  <edelsohn@mhpcc.edu>

	* rs6000.c (function_arg_boundary): Revert accidental change on
	September 18.

Fri Sep 25 20:30:00 1998  Michael Meissner  <meissner@cygnus.com>
